// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tab > should match a snapshot and render children 1`] = `
<DocumentFragment>
  <input
    class="foo el-tab"
  />
</DocumentFragment>
`;

exports[`Tab > should match a snapshot and render children 2`] = `
<DocumentFragment>
  <input
    class="foo el-tab"
  />
</DocumentFragment>
`;

exports[`TabsFooter > should match a snapshot and render children 1`] = `
<DocumentFragment>
  <div
    class="foo el-tabs-footer"
  >
    <div>
      Child
    </div>
  </div>
</DocumentFragment>
`;

exports[`TabsItem > should match a snapshot and render children 1`] = `
<DocumentFragment>
  <span
    class="foo el-tabs-item"
  >
    <div>
      Child
    </div>
  </span>
</DocumentFragment>
`;

exports[`TabsLabel > should match a snapshot and render children 1`] = `
<DocumentFragment>
  <label
    class="foo el-tabs-label"
  >
    <div>
      Child
    </div>
  </label>
</DocumentFragment>
`;

exports[`TabsOptionsWrap > should match a snapshot and render children 1`] = `
<DocumentFragment>
  <div
    class="foo el-tabs-options-wrap"
  >
    <div>
      Child
    </div>
  </div>
</DocumentFragment>
`;

exports[`TabsWrap > should match a snapshot and render children 1`] = `
<DocumentFragment>
  <div
    class="foo el-tabs-wrap"
  >
    <div>
      Child
    </div>
  </div>
</DocumentFragment>
`;
